@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.95 2002/03/08 03:57:16 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.96 2002/03/08 23:22:32 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,17 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2002-03-09 11:04 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * include/hbpcode.h
+  * source/compiler/genc.c
+  * source/compiler/harbour.c
+  * source/compiler/hbfix.c
+  * source/compiler/hbpcode.c
+  * source/vm/hvm.c
+    + Added support for new PCODE HB_P_LINEOFFSET.
+
+  /* xHarbour executable (using line numbers) are now significantly smaller and faster. */
 
 2002-03-08 15:16 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * source/vm/garbage.c
